Fixed icon vertical spacing.

--- a/src/css/bootstrap-treeview.css
+++ b/src/css/bootstrap-treeview.css
@@ -43,6 +43,6 @@
     font-size: 12px;
 }
 
-.fa-treeview {
+.treeview-icon {
     line-height: 1.428;
 }
